# enphase-bridge

./: .dockerignore  .gitignore  ARCH.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: release-please-config.json
.github/workflows/: cd.yml  ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: API_KEY_AUTH.md  ARCHITECTURE.md  DATA_CONTRACT.md  TROUBLESHOOTING.md  architecture.html
migrations/: 001_initial.sql  002_energy_window_validity_boundary_snapshot.sql  003_energy_balance_was_clamped.sql  004_inverter_last_report_date.sql  005_power_samples_window_averages.sql  006_phase_reading.sql
specs/001-enphase-gateway-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-api-key-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  startup.rs  util.rs
src/api/: server.rs
src/auth/: mod.rs  token_manager.rs
src/collector/: gateway_client.rs  mod.rs  scheduler.rs  window_aggregator.rs
src/inverter/: snapshot.rs
src/storage/: boundary_snapshot.rs  config_store.rs  db.rs  energy_window.rs  inverter_snapshot.rs  mod.rs  models.rs  phase_reading.rs  power_sample.rs  tou_schedule.rs  true_up.rs
src/tou/: mod.rs  probe.rs  (+2 more)
tests/: integration.rs  unit.rs
(+72 files in other folders)
