[package]
name = "enphase-bridge"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "enphase-bridge"
path = "src/main.rs"

[[bin]]
name = "recompute_windows"
path = "src/bin/recompute_windows.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
jsonwebtoken = "9"
base64 = "0.22"
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockito = "1"
tracing-test = "0.2.6"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
